src/components/Footer/Footer.module.css
/* Google Font */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

/* Base Colors */
:root {
    --pink: #FAA0E2;
}

/* Footer */
.footer {
    background-color: var(--pink);
    padding: 25px 30px 30px;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: flex-end;
}

footer {
    position: relative;
    left: 0;
    right: 0;
    bottom: 0;
}

.rectangle {
    background: white;
    width: 330px;
    height: 40px;
    border-radius: 12px;
}

.footerText {
    color: white;
    font-family: "Inter", sans-serif;
    font-weight: 700;
    font-size: 15px;
    line-height: 0;
}

.signUp {
    display: flex;
    flex-flow: column nowrap;
    gap: 5px;
}

/* Social Media Icons */

.instagram {
    color: white;
}

.mail {
    color: white;
    rotate: -45deg;
}

.socials {
    display: flex;
    flex-flow: row nowrap;
    gap: 20px;
    align-items: center;
}

/* Grow */
.hvrGrow {
    display: inline-block;
    vertical-align: middle;
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    transition-duration: 0.3s;
    transition-property: transform;
}

.hvrGrow:hover,
.hvrGrow:focus,
.hvrGrow:active {
    transform: scale(1.1);
}

